WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207020
Media controls of the video player on nfl.com are not visible in fullscreen mode (iPad only)
https://bugs.webkit.org/show_bug.cgi?id=207020
Summary
Media controls of the video player on nfl.com are not visible in fullscreen m...
Peng Liu
Reported
2020-01-30 15:32:55 PST
Media controls of the video player on nfl.com are not visible in fullscreen mode (iPad only)
Attachments
Patch
(5.23 KB, patch)
2020-01-30 15:42 PST
,
Peng Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Peng Liu
Comment 1
2020-01-30 15:34:08 PST
<
rdar://problem/58807210
>
Peng Liu
Comment 2
2020-01-30 15:42:37 PST
Created
attachment 389297
[details]
Patch
WebKit Commit Bot
Comment 3
2020-01-31 07:44:08 PST
The commit-queue encountered the following flaky tests while processing
attachment 389297
[details]
: media/modern-media-controls/compact-media-controls/compact-media-controls-constructor.html
bug 193587
(author:
graouts@apple.com
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4
2020-01-31 07:44:46 PST
Comment on
attachment 389297
[details]
Patch Clearing flags on attachment: 389297 Committed
r255495
: <
https://trac.webkit.org/changeset/255495
>
WebKit Commit Bot
Comment 5
2020-01-31 07:44:48 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug