Media controls of the video player on nfl.com are not visible in fullscreen mode (iPad only) https://bugs.webkit.org/show_bug.cgi?id=207020

Reviewed by Eric Carlson.

Add a quirk to disable the element fullscreen API support for nfl.com on iPads.

* dom/DocumentFullscreen.idl:
* dom/Element.idl:
* page/Quirks.cpp:
(WebCore::Quirks::shouldDisableElementFullscreenQuirk const):
* page/Quirks.h:


Canonical link: https://commits.webkit.org/220056@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255495 268f45cc-cd09-0410-ab3c-d52691b4dbfc